added json-server and http request logics
-Added json-server to the project
-Added nanoid to the project
-Built the data structure of eurovision-noticias
-Added logic to get and post data from json-server to the Front-end
-Added the uploader.html to allow user to post text to the server.

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
             
             </div>
                 </div>
+                <div id="info-container">
+                    
+                </div>
             </div>
             <aside>
                 <h2>El compte enrere!</h2>
@@ -345,6 +348,7 @@
             console.log(calendar2.value().format('LLL'));
         });
     </script>
+    <script src="./js/request.js"></script>
     <script src="./js/nav.js"></script>
     <script src="./js/slide-articulos.js"></script>
     <script src="./js/cuenta-atras.js"></script>
