classes del div

--- a/firebase/getArticles/getArticle.html
+++ b/firebase/getArticles/getArticle.html
@@ -23,11 +23,11 @@
   <script src="getArticle.js"></script>
   <script type="text/x-template" id="templateArticle">
     <div class= "article"> 
-      <h2> {{titol}} </h2> 
-      <h4> {{subtitol}}</h4> 
-      <p>{{autor}}</p> 
-      <img width="200px" v-bind:src="img">  
-      <p>{{contingut}} </p>
+      <h2 class='titol'> {{titol}} </h2> 
+      <h4 class='subtitol'> {{subtitol}}</h4> 
+      <p class='autor'>{{autor}}</p> 
+      <img width="600px" v-bind:src="img">  
+      <p class='contigut'>{{contingut}} </p>
     </div>
   </script>
 </body>
