Edit and delete

--- a/firebase/getArticles/getArticle.html
+++ b/firebase/getArticles/getArticle.html
@@ -21,7 +21,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-storage.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-database.js"></script>
   <script src="getArticle.js"></script>
-  <script type="text/x-template" id="templateArticle">
+  <script type="text/x-template" id="templateArticleImg">
     <div class= "article"> 
       <h2 class='titol'> {{titol}} </h2> 
       <h4 class='subtitol'> {{subtitol}}</h4> 
