--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <link rel="stylesheet" href="./estilos/swipe_up.css">
+    <link rel="stylesheet" href="./css/swipe_up.css">
 
     <title>Document</title>
     <style>
@@ -24,16 +24,22 @@
             color:aliceblue;
             position: absolute;
             bottom: 200px;
-            margin-left: 40vw;
             font-family: 'Kaushan Script', cursive;
             font-size:4em;
             font-weight: 100;
+            left:0;
+            right: 0;
+            margin: auto;
+
         }
         .title-splashpage2{
             color:aliceblue;
             position: absolute;
             bottom: 150px;
-            margin-left: 36vw;
+            left:0;
+            right: 0;
+            bottom:200;
+            margin:auto;
             font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size:2em;
             font-weight: 100;
@@ -68,6 +74,10 @@
         audio{
             display: none;
         }
+        .text{
+            display: flex;
+            margin: auto;
+        }
     </style>
 </head>
 <body>
@@ -79,8 +89,10 @@
             <source src="./audio/eurovision_intro.ogg" type="audio/ogg"/>
         </audio>
         
-        <h1 class="title-splashpage">L'Eurovisiu</h1>
-        <h2 class="title-splashpage2">Eurovisió, més aprop que mai</h2>
+        <div class="text">
+            <h1 class="title-splashpage">L'Eurovisiu</h1>
+            <h2 class="title-splashpage2">Eurovisió, més aprop que mai</h2>
+        </div>
         <canvas id="myCanvas">
             
         </canvas>
