tener los dos lo mismo

--- a/firebase/generadorArticle/generadorArticles.html
+++ b/firebase/generadorArticle/generadorArticles.html
@@ -56,6 +56,11 @@
     
     <h3 id="feedback">Article enviat</h3>
     <button id="btn">Send</button>
+
+    <br>
+    <br>
+    <button id="btn">Per editar o esborrar fes clic aquí</button>
+
   </div>
 
   
