filtre incorporado mal

--- a/firebase/filtre/filtre.html
+++ b/firebase/filtre/filtre.html
@@ -28,8 +28,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-storage.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-database.js"></script>
-  <script src="checkbox.js"></script>
-  <!-- <script src="filtre.js"></script> -->
+  <script src="checkboxFiltre.js"></script>
   <script src="filtre.js"></script>
   
   <script type="text/x-template" id="templateArticleImg">
